fixed spacing at bottom of spot info

--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -39,6 +39,7 @@ a{
     grid-gap: 1rem;
     color: black;
     text-decoration: none;
+    margin-bottom: 50px;
 
 }
 
